[tool.poetry]
name = "wordle_helper"
version = "0.1.0"
description = "Wordle solver with simulation code and accuracy metrics"
authors = ["Grant Williams <grant@grantwilliams.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
